Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Add ZODB 3.5 ordering support for before commit hook
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-