@@ -19,6 +19,7 @@ from zLOG import LOG, INFO
 
 import PatchCMFCoreCatalogTool
 import PatchCMFCoreCMFCatalogAware
+import PatchCMFCorePortalFolder
 import PatchZODBTransaction
 
 # DCWorkflowGraph is not always present
