@@ -4,6 +4,7 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - Add ZODB 3.5 ordering support for before commit hook
+- CMF > 1.5.3 : allow root doted prefixed object name overrides
 Bug fixes:
 ~~~~~~~~~~
 -
